--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
         "dev": "node --watch index.js"
     },
     "dependencies": {
+        "@google/genai": "^1.34.0",
         "@google/generative-ai": "^0.24.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
